--- a/task_v2.html
+++ b/task_v2.html
@@ -28,7 +28,7 @@
       <div class="blog">Blog</div>
       <div class="contact">Contact</div>
       <div class="download-resume">Download Resume</div>
-      <img class="home-inner" alt="" src="./public/ellipse-1@2x.png" />
+      <img class="home-inner" alt="" src="https://i.redd.it/g4fm789q2cc11.jpg" />
 
       <section class="rectangle-section"></section>
       <div class="rectangle-div"></div>
