--- a/index.html
+++ b/index.html
@@ -60,17 +60,17 @@
 
         .home-inner {
             position: relative;
-            width: 243px; /* Adjust the width as needed for a circle */
-            height: 243px; /* Set the height equal to the width for a circle */
+            width: 243px;
+            height: 243px;
             margin: 20px auto; /* Center the image horizontally */
             overflow: hidden; /* Clip the image to the border-radius */
             border-radius: 50%;
             object-fit: cover;
         }
-
+        
         .home-inner img {
             width: 100%; /* Make the image fill the container */
-            height: auto; /* Maintain the aspect ratio */
+            height: 100%; /* Make the height 100% to maintain a perfect circle */
             object-fit: cover; /* Cover the container without stretching */
         }
 
