--- a/index.html
+++ b/index.html
@@ -223,16 +223,17 @@
     <section id="about-me">
         <h2>About Me</h2>
         <div class="hi-i-am-container">
-            <p class="hi-i-am">Hi, I am John,</p>
+            <p class="hi-i-am">I am Nicholas Coppola,</p>
             <p class="hi-i-am">Creative Technologist</p>
         </div>
         <div class="home-inner">
             <img alt="" src="https://i.redd.it/g4fm789q2cc11.jpg">
         </div>
         <div class="amet-minim-mollit">
-            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
-            sint. Velit officia consequat duis enim velit mollit. Exercitation
-            veniam consequat sunt nostrud amet.
+            Now it's not just Hollywood that considers Nicolas Cage an eccentric.
+            For the sake of the role, he is ready to eat insects; it’s time to make a film about his personal life in the spirit of Indian cinema filled with passions and unexpected twists.
+            His obsession with comic books and expensive cars is an example for young city managers of how not to manage finances.
+            But the actor does not lose heart: negative experience is the basis for positivity.
         </div>
     </section>
 
