--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
     <section id="about-me">
         <h2>About Me</h2>
         <div class="hi-i-am-container">
-            <p class="hi-i-am">I am Nicholas Coppola,</p>
+            <p class="hi-i-am">Nicholas Coppola</p>
             <p class="hi-i-am">Creative Technologist</p>
         </div>
         <div class="home-inner">
