--- a/index.html
+++ b/index.html
@@ -213,15 +213,15 @@
     <nav>
         <ul>
             <li><a href="#main">Main</a></li>
-            <li><a href="#about-me">About Me</a></li>
+            <li><a href="#about-me">About Someone</a></li>
             <li><a href="#practical-works">Practical Works</a></li>
-            <li><a href="#laboratory-classes">Laboratory Classes</a></li>
+            <li><a href="#laboratory-classes">Laboratory Works</a></li>
         </ul>
     </nav>
 
     <!-- About Me Section -->
     <section id="about-me">
-        <h2>About Me</h2>
+        <h2>About Someone</h2>
         <div class="hi-i-am-container">
             <p class="hi-i-am">Nicholas Coppola</p>
             <p class="hi-i-am">Creative Technologist</p>
@@ -253,7 +253,7 @@
 
     <!-- Laboratory Classes Section -->
     <section id="laboratory-classes">
-        <h2>Laboratory Classes</h2>
+        <h2>Laboratory Works</h2>
         <ul>
             <li>
                 <a class="button-link" href="/kiyb/task1.html">Laboratory Task 1</a>
