--- a/index.html
+++ b/index.html
@@ -212,10 +212,10 @@
     <!-- Navigation Menu -->
     <nav>
         <ul>
-            <li><a href="#main">Main</a></li>
-            <li><a href="#about-me">About Someone</a></li>
-            <li><a href="#practical-works">Practical Works</a></li>
-            <li><a href="#laboratory-classes">Laboratory Works</a></li>
+            <li><a class="button-link" href="#main">Main</a></li>
+            <li><a class="button-link" href="#about-me">About Someone</a></li>
+            <li><a class="button-link" href="#practical-works">Practical Works</a></li>
+            <li><a class="button-link" href="#laboratory-classes">Laboratory Works</a></li>
         </ul>
     </nav>
 
