--- a/index.html
+++ b/index.html
@@ -230,10 +230,8 @@
         <ul>
             <li><a class="button-link" href="#main">Main</a></li>
             <li><a class="button-link" href="#about-me">About Someone</a></li>
-            <li class="vertical-buttons">
-                <a class="button-link" href="#practical-works">Practical Works</a>
-                <a class="button-link" href="#laboratory-classes">Laboratory Works</a>
-            </li>
+            <li><a class="button-link" href="#practical-works">Practical Works</a></li>
+            <li><a class="button-link" href="#laboratory-classes">Laboratory Works</a></li>
         </ul>
     </nav>
 
@@ -260,10 +258,10 @@
         <h2>Practical Works</h2>
         <ul>
             <li>
-                <a class="button-link" href="/kisyr/Practical_work_1.html">Practical Work 1</a>
+                <a class="vertical-buttons" class="button-link" href="/kisyr/Practical_work_1.html">Practical Work 1</a>
             </li>
             <li>
-                <a class="button-link" href="practical-work2.html">Practical Work 2</a>
+                <a class="vertical-buttons" class="button-link" href="practical-work2.html">Practical Work 2</a>
                 <p>[Brief Description]</p>
             </li>
         </ul>
@@ -274,19 +272,19 @@
         <h2>Laboratory Works</h2>
         <ul>
             <li>
-                <a class="button-link" href="/kiyb/task1.html">Laboratory Task 1</a>
+                <a class="vertical-buttons" class="button-link" href="/kiyb/task1.html">Laboratory Task 1</a>
                 <p>[Brief Description]</p>
             </li>
             <li>
-                <a class="button-link" href="/kisyr/lab_task_2.html">Laboratory Task 2</a>
+                <a class="vertical-buttons" class="button-link" href="/kisyr/lab_task_2.html">Laboratory Task 2</a>
                 <p>[Brief Description]</p>
             </li>
             <li>
-                <a class="button-link" href="/kisyr/lab_task_3.html">Laboratory Task 3</a>
+                <a class="vertical-buttons" class="button-link" href="/kisyr/lab_task_3.html">Laboratory Task 3</a>
                 <p>[Brief Description]</p>
             </li>
             <li>
-                <a class="button-link" href="/kisyr/lab_task_4.html">Laboratory Task 4</a>
+                <a class="vertical-buttons" class="button-link" href="/kisyr/lab_task_4.html">Laboratory Task 4</a>
                 <p>[Brief Description]</p>
             </li>
         </ul>
