--- a/index.html
+++ b/index.html
@@ -258,10 +258,10 @@
         <h2>Practical Works</h2>
         <ul>
             <li>
-                <a class="vertical-buttons" class="button-link" href="/kisyr/Practical_work_1.html">Practical Work 1</a>
+                <a class="button-link" href="/kisyr/Practical_work_1.html">Practical Work 1</a>
             </li>
             <li>
-                <a class="vertical-buttons" class="button-link" href="practical-work2.html">Practical Work 2</a>
+                <a class="button-link" href="practical-work2.html">Practical Work 2</a>
                 <p>[Brief Description]</p>
             </li>
         </ul>
@@ -272,19 +272,19 @@
         <h2>Laboratory Works</h2>
         <ul>
             <li>
-                <a class="vertical-buttons" class="button-link" href="/kiyb/task1.html">Laboratory Task 1</a>
+                <a class="button-link" href="/kiyb/task1.html">Laboratory Task 1</a>
                 <p>[Brief Description]</p>
             </li>
             <li>
-                <a class="vertical-buttons" class="button-link" href="/kisyr/lab_task_2.html">Laboratory Task 2</a>
+                <a class="button-link" href="/kisyr/lab_task_2.html">Laboratory Task 2</a>
                 <p>[Brief Description]</p>
             </li>
             <li>
-                <a class="vertical-buttons" class="button-link" href="/kisyr/lab_task_3.html">Laboratory Task 3</a>
+                <a class="button-link" href="/kisyr/lab_task_3.html">Laboratory Task 3</a>
                 <p>[Brief Description]</p>
             </li>
             <li>
-                <a class="vertical-buttons" class="button-link" href="/kisyr/lab_task_4.html">Laboratory Task 4</a>
+                <a class="button-link" href="/kisyr/lab_task_4.html">Laboratory Task 4</a>
                 <p>[Brief Description]</p>
             </li>
         </ul>
