--- a/index.html
+++ b/index.html
@@ -215,10 +215,11 @@
             background-color: #0056b3;
         }
         
-        .vertical-buttons ul {
+        .vertical-buttons {
             display: flex;
             flex-direction: column;
             align-items: center; /* Optional: Center-align the buttons */
+            margin-top: 10px; /* Optional: Add some top margin between sections */
         }
     </style>
 </head>
