--- a/index.html
+++ b/index.html
@@ -221,6 +221,10 @@
             align-items: center; /* Optional: Center-align the buttons */
             margin-top: 10px; /* Optional: Add some top margin between sections */
         }
+        
+        .vertical-buttons .button-link {
+            margin: 10px 0; /* Adjust the margin as needed for spacing */
+        }
     </style>
 </head>
 <body>
