--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
         .vertical-buttons {
             display: flex;
             flex-direction: column;
-            align-items: center; / Optional: Center-align the buttons /
-            margin-top: 10px; / Optional: Add some top margin between sections /
+            align-items: center;
+            margin-top: 10px; 
         }
 
         .vertical-buttons .button-link {
