--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
             margin: 0;
             padding: 0;
             text-align: center; /* Center-align text within the body */
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh; /* Set minimum height to full viewport height */
         }
 
         /* Additional styles provided */
@@ -89,11 +92,8 @@
             justify-content: center;
             align-items: center;
             padding: 10px;
-            position: absolute;
-            bottom: 0;
-            left: 0;
         }
-
+        
         .footer-child {
             flex-grow: 1;
         }
@@ -299,14 +299,19 @@
         </div>
     </section>
 
-    <!-- Footer Section -->
-    <div class="overlay-container">
-        <div class="footer">
-            <div class="footer-child"></div>
-            <div class="copyright-2020-all">
-                Copyright ©2023 All rights reserved
+    <body class="flex-container">
+        <!-- Your existing HTML content goes here -->
+    
+        <!-- Footer Section -->
+        <div class="overlay-container">
+            <div class="footer">
+                <div class="footer-child"></div>
+                <div class="copyright-2020-all">
+                    Copyright ©2023 All rights reserved
+                </div>
             </div>
         </div>
-    </div>
+    </body>
+
 </body>
 </html>
