--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
         /* Style the overlay container */
         .overlay-container {
             position: relative;
-            flex-grow: 1; /* Make the overlay container grow to fill the remaining space */
+            flex-grow: 1;
+            display: flex;
+            flex-direction: column;
         }
         
         .footer {
@@ -88,10 +90,8 @@
             background-color: var(--color-white);
             text-align: center;
             font-size: var(--font-size-sm);
-            display: flex;
-            justify-content: center;
-            align-items: center;
             padding: 10px;
+            margin-top: auto; /* Push the footer to the bottom */
         }
         
         .footer-child {
