--- a/task_v1.html
+++ b/task_v1.html
@@ -12,6 +12,10 @@
       height: 100%;
       margin: 0;
       padding: 0;
+      font-family: 'YourCustomFont', sans-serif;
+      display: grid;
+      grid-template-columns: auto 1fr;
+      grid-template-rows: auto 1fr;
     }
 
     body {
@@ -23,9 +27,6 @@
 
     .container {
       height: 100vh;
-      display: grid;
-      grid-template-columns: auto 1fr;
-      grid-template-rows: auto 1fr;
     }
 
     .header {
@@ -47,7 +48,6 @@
       flex-direction: column;
       padding: 10px;
       max-width: 300px;
-      height: 100%;
       overflow: auto; /* Add overflow: auto to enable scrolling if needed */
     }
     
