--- a/task_v1.html
+++ b/task_v1.html
@@ -48,7 +48,7 @@
       flex-direction: column;
       padding: 10px;
       max-width: 300px;
-      overflow: auto; /* Add overflow: auto to enable scrolling if needed */
+      height: 100%; /* Add overflow: auto to enable scrolling if needed */
     }
     
     /* Add this style to stretch the left side */
@@ -58,9 +58,6 @@
     }
     
     .article-container {
-      display: grid;
-      grid-template-rows: auto auto auto; /* Adjusted grid-template-rows */
-      gap: 10px; /* Added gap for better spacing */
       height: 100%; /* Ensure .article-container covers the entire height */
     }
 
