--- a/task_v1.html
+++ b/task_v1.html
@@ -44,6 +44,7 @@
     }
 
     .left {
+      grid-area: left;
       display: flex;
       flex-direction: column;
       padding: 10px;
@@ -78,6 +79,7 @@
     }
 
     .days-of-week {
+      grid-area: right;
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       grid-template-rows: repeat(2, 1fr);
