--- a/task_v1.html
+++ b/task_v1.html
@@ -23,7 +23,7 @@
     }
 
     .container {
-      height: 100vh;
+      height: 100%;
       display: grid;
       grid-template-columns: auto 1fr;
       grid-template-rows: auto 1fr;
