--- a/task_v1.html
+++ b/task_v1.html
@@ -61,7 +61,7 @@
     
     .article-container {
       display: grid;
-      grid-template-rows: auto auto auto;
+      grid-template-rows: auto auto auto 1fr;
       gap: 10px;
       height: 100%;
     }
