--- a/task_v1.html
+++ b/task_v1.html
@@ -25,7 +25,7 @@
     .container {
       height: 100%;
       display: grid;
-      grid-template-columns: auto 1fr;
+      grid-template-columns: 300px 1fr;
       grid-template-rows: auto 1fr;
     }
 
