--- a/task_v1.html
+++ b/task_v1.html
@@ -18,7 +18,7 @@
     body {
       display: grid;
       grid-template-columns: 1fr;
-      grid-template-rows: auto 1fr;
+      grid-template-rows: 1fr;
       height: 100vh;
     }
 
