--- a/task_v1.html
+++ b/task_v1.html
@@ -20,6 +20,7 @@
       grid-template-columns: 1fr;
       grid-template-rows: auto 1fr auto;
       height: 100vh;
+      margin: 0; /* Remove the default margin */
     }
 
     .container {
