--- a/task_v1.html
+++ b/task_v1.html
@@ -17,7 +17,7 @@
 
     body {
       display: grid;
-      grid-template-columns: 1fr;
+      grid-template-columns: auto 1fr;
       grid-template-rows: auto 1fr auto;
       height: 100vh;
       margin: 0; /* Remove the default margin */
