--- a/task_v1.html
+++ b/task_v1.html
@@ -28,7 +28,7 @@
 
     .container {
       display: grid;
-      grid-template-columns: 150px 1fr;
+      grid-template-columns: 1fr 1fr;
       grid-template-rows: auto 1fr;
       grid-area: main;
     }
