--- a/task_v1.html
+++ b/task_v1.html
@@ -113,7 +113,9 @@
     <div class="header">
       <h1>PLAN WEEKLY</h1>
       <h2>Week Of</h2>
+      <textarea class="text-input" rows="1" type="text"></textarea>
       <h2>Healthy Habit</h2>
+      <textarea class="text-input" rows="1" type="text"></textarea>
       <h2>Room for Improvement</h2>
       <h2>Rocked It</h2>
     </div>
