--- a/task_v1.html
+++ b/task_v1.html
@@ -44,7 +44,8 @@
 
     .header h1, .header h2 {
       margin: 0;
-      margin-top: 50px;
+      margin-top: 10px;
+      display: inline; /* Added to allow inline elements */
     }
 
     .left {
@@ -78,6 +79,8 @@
       box-sizing: border-box;
       border: none;
       border-bottom: 1px solid #000;
+      font-size: 0.8em; /* Adjusted font size */
+      display: inline-block; /* Added to allow inline elements */
     }
 
     .days-of-week {
