--- a/task_v1.html
+++ b/task_v1.html
@@ -36,6 +36,7 @@
     .header {
       grid-area: header;
       display: flex;
+      flex-direction: column;
       justify-content: space-between;
       align-items: flex-start;
       padding: 10px;
@@ -45,13 +46,14 @@
     .header h1, .header h2 {
       margin: 0;
       margin-top: 10px;
-      display: inline; /* Added to allow inline elements */
     }
 
     .left {
+      grid-area: left;
       display: flex;
       flex-direction: column;
       padding: 10px;
+      max-width: 300px;
     }
     
     /* Add this style to stretch the left side */
@@ -80,13 +82,14 @@
       border: none;
       border-bottom: 1px solid #000;
       font-size: 0.8em; /* Adjusted font size */
-      display: inline-block; /* Added to allow inline elements */
     }
 
     .days-of-week {
+      grid-area: right;
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       grid-template-rows: repeat(2, 1fr);
+      height: 100%;
     }
     
     .footer {
