--- a/task_v1.html
+++ b/task_v1.html
@@ -73,13 +73,16 @@
     }
 
     .small-text-input {
-      width: calc(50% - 10px); /* Reduced width to 50% */
+      width: 50px; /* Reduced width */
+      min-width: 50px; /* Minimum width to prevent further resizing */
+      max-width: 50px; /* Maximum width to prevent further resizing */
       margin: 0;
       padding: 5px;
       box-sizing: border-box;
       border: none;
       border-bottom: 1px solid #000;
       font-size: 0.8em; /* Adjusted font size */
+      resize: none; /* Disabled resizing */
     }
 
     .text-input {
