--- a/task_v1.html
+++ b/task_v1.html
@@ -73,10 +73,11 @@
     }
 
     .small-text-input {
-      width: 50px; /* Reduced width */
-      min-width: 50px; /* Minimum width to prevent further resizing */
-      max-width: 50px; /* Maximum width to prevent further resizing */
-      margin: 0;
+      width: 100px; /* Increased width */
+      min-width: 100px; /* Minimum width to prevent further resizing */
+      max-width: 100px; /* Maximum width to prevent further resizing */
+      margin-top: 20px; /* Moved down by 20px */
+      margin-bottom: 20px; /* Adjusted margin-bottom */
       padding: 5px;
       box-sizing: border-box;
       border: none;
