--- a/task_v1.html
+++ b/task_v1.html
@@ -125,6 +125,7 @@
     .checkbox-container {
       display: flex;
       align-items: center;
+      margin-top: 2cm;
     }
 
     .checkbox {
@@ -133,16 +134,17 @@
       border: 1px solid #000;
       margin-right: 5px;
       cursor: pointer;
+      display: none;
     }
 
     .check-mark {
-      display: none;
       width: 16px;
       height: 16px;
       background-color: #00ff00;
       position: relative;
-      top: 2px;
+      top: 2cm;
       left: 2px;
+      display: none;
     }
 
     .checkbox:checked + .check-mark {
