--- a/task_v1.html
+++ b/task_v1.html
@@ -125,7 +125,7 @@
     .checkbox-container {
       display: flex;
       align-items: center;
-      margin-top: 2cm;
+      margin-top: 2px;
     }
 
     .checkbox {
@@ -134,6 +134,7 @@
       border: 1px solid #000;
       margin-right: 5px;
       cursor: pointer;
+      display: none;
     }
 
     .check-mark {
@@ -142,7 +143,7 @@
       height: 16px;
       background-color: #00ff00;
       position: relative;
-      top: 2cm;
+      top: 2px;
       left: 2px;
     }
 
