--- a/task_v1.html
+++ b/task_v1.html
@@ -155,6 +155,10 @@
     .checkbox:focus {
       outline: none;
     }
+    
+    .checkbox::-moz-focus-inner {
+      border: 0;
+    }
   </style>
 </head>
 <body>
