--- a/task_v1.html
+++ b/task_v1.html
@@ -153,7 +153,8 @@
     }
 
     .checkbox:focus {
-      outline: none;
+      outline: none !important;
+      border: 1px solid transparent; /* Add this line to hide the border */
     }
     
     .checkbox::-moz-focus-inner {
