--- a/task_v1.html
+++ b/task_v1.html
@@ -154,7 +154,7 @@
 
     .checkbox:focus {
       outline: none !important;
-      border: 1px solid transparent; /* Add this line to hide the border */
+      box-shadow: none !important;
     }
     
     .checkbox::-moz-focus-inner {
