--- a/task_v1.html
+++ b/task_v1.html
@@ -158,7 +158,7 @@
     }
     
     .checkbox::-moz-focus-inner {
-      border: 0;
+      box-shadow: none !important;
     }
   </style>
 </head>
