--- a/task_v3.html
+++ b/task_v3.html
@@ -4,7 +4,7 @@
   	<meta charset="utf-8">
   	<meta name="viewport" content="initial-scale=1, width=device-width">
   	
-  	<link rel="stylesheet"  href="styles_v5.css" />
+  	<link rel="stylesheet"  href="./styles_v5.css" />
   	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;700;900&display=swap" />
   	
   	
