--- a/task_v2.html
+++ b/task_v2.html
@@ -99,13 +99,13 @@
       <div class="div">2020</div>
       <div class="div1">2018</div>
       <div class="div2">2018</div>
-      <img class="home-child6" alt="" src="https://ik.imagekit.io/panmac/tr:f-auto,w-740,pr-true//bcd02f72-b50c-0179-8b4b-5e44f5340bd4/1c94d79b-a651-47df-aeb2-d7fce7570a22/george-orwell-quotes-header-min.jpg" />
+      <img class="home-child6" alt="" src="./public/vector-8.svg" />
 
       <img class="home-child7" alt="" src="./public/vector-12.svg" />
 
       <img class="home-child8" alt="" src="./public/vector-13.svg" />
 
-      <img class="rectangle-icon" alt="" src="./public/rectangle-30@2x.png" />
+      <img class="rectangle-icon" alt="" src="https://ik.imagekit.io/panmac/tr:f-auto,w-740,pr-true//bcd02f72-b50c-0179-8b4b-5e44f5340bd4/1c94d79b-a651-47df-aeb2-d7fce7570a22/george-orwell-quotes-header-min.jpg" />
 
       <img class="home-child9" alt="" src="./public/rectangle-32@2x.png" />
 
