--- a/task_v2.html
+++ b/task_v2.html
@@ -107,9 +107,9 @@
 
       <img class="rectangle-icon" alt="" src="https://ik.imagekit.io/panmac/tr:f-auto,w-740,pr-true//bcd02f72-b50c-0179-8b4b-5e44f5340bd4/1c94d79b-a651-47df-aeb2-d7fce7570a22/george-orwell-quotes-header-min.jpg" />
 
-      <img class="home-child9" alt="" src="./public/rectangle-32@2x.png" />
+      <img class="home-child9" alt="" src="https://ik.imagekit.io/panmac/tr:f-auto,w-740,pr-true//bcd02f72-b50c-0179-8b4b-5e44f5340bd4/1c94d79b-a651-47df-aeb2-d7fce7570a22/george-orwell-quotes-header-min.jpg" />
 
-      <img class="home-child10" alt="" src="./public/rectangle-34@2x.png" />
+      <img class="home-child10" alt="" src="https://ik.imagekit.io/panmac/tr:f-auto,w-740,pr-true//bcd02f72-b50c-0179-8b4b-5e44f5340bd4/1c94d79b-a651-47df-aeb2-d7fce7570a22/george-orwell-quotes-header-min.jpg" />
     </div>
 
     <script>
