--- a/task_v2.html
+++ b/task_v2.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./global.css" />
     <link rel="stylesheet" href="./index.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;700;900&display=swap"/>
-    <styles>
+    <style>
     body {
       display: flex;
       align-items: center;
