--- a/task_v2.html
+++ b/task_v2.html
@@ -8,6 +8,23 @@
     <link rel="stylesheet" href="./index.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;700;900&display=swap"/>
     <style>
+      body {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            margin: 0;
+          }
+      
+        .home {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
+            max-width: 1200px; /* Set a maximum width if desired */
+            margin: 0 auto;
+            padding: 20px; /* Add padding as needed */
+          }
 
     </style>
   </head>
