--- a/task_v2.html
+++ b/task_v2.html
@@ -33,13 +33,13 @@
       <div class="home-child"></div>
       <div class="home-item"></div>
       <h1 class="hi-i-am-container">
-        <p class="hi-i-am">Hi, I am John,</p>
-        <p class="hi-i-am">Creative Technologist</p>
+        <p class="hi-i-am">About Nicholas</p>
+        <p class="hi-i-am">Senior Engineer</p>
       </h1>
       <div class="amet-minim-mollit">
-        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
-        sint. Velit officia consequat duis enim velit mollit. Exercitation
-        veniam consequat sunt nostrud amet.
+        Unbearable talented nephew Nicholas Kim Coppola.
+        For the sake of the role, he is ready to eat insects;
+        it’s time to make a film about his personal life in the spirit of Indian cinema filled with passions and unexpected twists.
       </div>
       <button class="works">Works</button>
       <div class="blog">Blog</div>
