--- a/task_v2.html
+++ b/task_v2.html
@@ -25,6 +25,14 @@
             margin: 0 auto;
             padding: 20px; /* Add padding as needed */
           }
+      
+        .recent-posts {
+        background-color: #f0f0f0; /* Set your desired background color */
+        width: 100%;
+        padding: 10px; /* Adjust padding as needed */
+        box-sizing: border-box;
+        text-align: center; /* Center the text horizontally */
+      }
 
     </style>
   </head>
