--- a/task_v2.html
+++ b/task_v2.html
@@ -17,13 +17,16 @@
           }
       
         .home {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            width: 100%;
-            max-width: 1200px; /* Set a maximum width if desired */
-            margin: 0 auto;
-            padding: 20px; /* Add padding as needed */
+            position: relative;
+            background-color: #fff;
+            width: 100vw;
+            min-height: 100vh;
+            overflow: hidden;
+            cursor: pointer;
+            text-align: left;
+            font-size: 16px;
+            color: #21243d;
+            font-family: Heebo;
           }
 
     </style>
