--- a/task_v2.html
+++ b/task_v2.html
@@ -20,9 +20,13 @@
             position: relative;
             background-color: #fff;
             width: 100vw;
-            min-height: 100vh;
+            height: 100vh;
             overflow: hidden;
             cursor: pointer;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
             text-align: left;
             font-size: 16px;
             color: #21243d;
