--- a/task_v2.html
+++ b/task_v2.html
@@ -20,10 +20,9 @@
             position: relative;
             background-color: #fff;
             width: 100vw;
-            height: 100vh;
+            min-height: 100vh;
             overflow: hidden;
             cursor: pointer;
-            display: flex;
             text-align: left;
             font-size: 16px;
             color: #21243d;
