--- a/task_v2.html
+++ b/task_v2.html
@@ -23,6 +23,8 @@
             min-height: 100vh;
             overflow: hidden;
             cursor: pointer;
+            align-items: center;
+            justify-content: center;
             text-align: left;
             font-size: 16px;
             color: #21243d;
