--- a/task_v2.html
+++ b/task_v2.html
@@ -23,6 +23,7 @@
             min-height: 100vh;
             overflow: hidden;
             cursor: pointer;
+            flex-direction: column;
             align-items: center;
             justify-content: center;
             text-align: left;
