--- a/task_v2.html
+++ b/task_v2.html
@@ -20,7 +20,7 @@
             position: relative;
             background-color: #fff;
             width: 100vw;
-            min-height: 100vh;
+            height: 100vh;
             overflow: hidden;
             cursor: pointer;
             display: flex;
