--- a/task_v2.html
+++ b/task_v2.html
@@ -21,7 +21,7 @@
             background-color: #fff;
             width: 100vw;
             height: 100vh;
-            overflow: hidden;
+            overflow-y: auto;
             cursor: pointer;
             display: flex;
             flex-direction: column;
