--- a/task_v2.html
+++ b/task_v2.html
@@ -21,9 +21,10 @@
             background-color: #fff;
             width: 100vw;
             height: 100vh;
-            overflow-y: auto;
+            overflow-y: auto; /* Enable vertical scrolling */
             display: flex;
             flex-direction: column;
+            justify-content: center;
             align-items: center;
             text-align: left;
             font-size: 16px;
