--- a/task_v2.html
+++ b/task_v2.html
@@ -9,28 +9,28 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;700;900&display=swap"/>
     <style>
       body {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
-            margin: 0;
-          }
-
-        .home {
-            position: relative;
-            background-color: #fff;
-            width: 100vw;
-            height: 100vh;
-            overflow-y: auto; /* Enable vertical scrolling */
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            text-align: left;
-            font-size: 16px;
-            color: #21243d;
-            font-family: Heebo;
-          }
+          margin: 0;
+          overflow: hidden;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          height: 100vh;
+      }
+      
+      .home {
+          position: relative;
+          background-color: #fff;
+          width: 100vw;
+          overflow-y: auto; /* Enable vertical scrolling */
+          text-align: left;
+          font-size: 16px;
+          color: #21243d;
+          font-family: Heebo;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+      }
 
     </style>
   </head>
