--- a/task_v2.html
+++ b/task_v2.html
@@ -21,10 +21,12 @@
           background-color: #fff;
           width: 100vw;
           height: 100vh;
-          overflow-y: auto; /* Enable vertical scrolling */
+          overflow: hidden;
+          cursor: pointer;
           display: flex;
           flex-direction: column;
           align-items: center;
+          justify-content: center;
           text-align: left;
           font-size: 16px;
           color: #21243d;
