--- a/task_v2.html
+++ b/task_v2.html
@@ -12,8 +12,9 @@
           display: flex;
           align-items: center;
           justify-content: center;
-          min-height: 100vh;
+          height: 100vh;
           margin: 0;
+          overflow: hidden;
       }
       
       .home {
@@ -22,9 +23,6 @@
           width: 100vw;
           height: 100vh;
           overflow-y: auto; /* Enable vertical scrolling */
-          display: flex;
-          flex-direction: column;
-          align-items: center;
           text-align: left;
           font-size: 16px;
           color: #21243d;
