--- a/task_v2.html
+++ b/task_v2.html
@@ -21,12 +21,15 @@
           position: relative;
           background-color: #fff;
           width: 100vw;
-          height: 100vh;
+          height: auto;
           overflow-y: auto; /* Enable vertical scrolling */
           text-align: left;
           font-size: 16px;
           color: #21243d;
           font-family: Heebo;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
       }
 
     </style>
