--- a/task_v2.html
+++ b/task_v2.html
@@ -18,18 +18,12 @@
       }
       
       .home {
-          position: relative;
           background-color: #fff;
-          width: 100vw;
-          height: auto;
-          overflow-y: auto; /* Enable vertical scrolling */
           text-align: left;
           font-size: 16px;
           color: #21243d;
           font-family: Heebo;
-          display: flex;
-          flex-direction: column;
-          align-items: center;
+          padding: 20px; /* Adjust as needed */
       }
 
     </style>
