--- a/task_v2.html
+++ b/task_v2.html
@@ -14,16 +14,19 @@
           justify-content: center;
           height: 100vh;
           margin: 0;
-          overflow: hidden;
       }
       
       .home {
+          position: relative;
           background-color: #fff;
+          width: 100vw;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
           text-align: left;
           font-size: 16px;
           color: #21243d;
           font-family: Heebo;
-          padding: 20px; /* Adjust as needed */
       }
 
     </style>
