--- a/task_v2.html
+++ b/task_v2.html
@@ -20,9 +20,11 @@
           position: relative;
           background-color: #fff;
           width: 100vw;
+          height: 100vh;
           display: flex;
           flex-direction: column;
           align-items: center;
+          justify-content: center;
           text-align: left;
           font-size: 16px;
           color: #21243d;
