--- a/task_v2.html
+++ b/task_v2.html
@@ -19,12 +19,11 @@
       .home {
           position: relative;
           background-color: #fff;
-          width: 100vw;
-          height: 100vh;
+          width: 100%;
+          min-height: 100vh;
           display: flex;
           flex-direction: column;
           align-items: center;
-          justify-content: center;
           text-align: left;
           font-size: 16px;
           color: #21243d;
