--- a/task_v2.html
+++ b/task_v2.html
@@ -17,14 +17,9 @@
       }
       
       .home {
-          position: relative;
           background-color: #fff;
-          width: 100%;
-          min-height: 100vh;
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          text-align: left;
+          overflow-y: auto; /* Enable vertical scrolling */
+          text-align: center;
           font-size: 16px;
           color: #21243d;
           font-family: Heebo;
