--- a/task_v2.html
+++ b/task_v2.html
@@ -17,12 +17,18 @@
       }
       
       .home {
-          background-color: #fff;
-          overflow-y: auto; /* Enable vertical scrolling */
-          text-align: center;
-          font-size: 16px;
-          color: #21243d;
-          font-family: Heebo;
+        position: relative;
+        background-color: #fff;
+        width: 100vw;
+        height: 100vh;
+        overflow-y: auto; /* Enable vertical scrolling */
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        font-size: 16px;
+        color: #21243d;
+        font-family: 'Heebo', sans-serif;
       }
 
     </style>
