--- a/task_v2.html
+++ b/task_v2.html
@@ -20,7 +20,7 @@
         position: relative;
         background-color: #fff;
         width: 100vw;
-        height: 100vh;
+        min-height: 100vh;
         overflow-y: auto; /* Enable vertical scrolling */
         display: flex;
         flex-direction: column;
