--- a/task_v2.html
+++ b/task_v2.html
@@ -31,6 +31,13 @@
         font-family: 'Heebo', sans-serif;
       }
 
+      .rectangle-section {
+          background-color: #edf7fa;
+          width: 100%;
+          height: 396px;
+          box-sizing: border-box;
+      }
+
     </style>
   </head>
   <body>
