--- a/task_v2.html
+++ b/task_v2.html
@@ -8,8 +8,28 @@
     <link rel="stylesheet" href="./index.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;700;900&display=swap"/>
     <style>
+       body {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          height: 100vh;
+          margin: 0;
+      }
       
-
+      .home {
+        position: relative;
+        background-color: #fff;
+        width: 100vw;
+        min-height: 100vh;
+        overflow-y: auto; /* Enable vertical scrolling */
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        font-size: 16px;
+        color: #21243d;
+        font-family: 'Heebo', sans-serif;
+      }
     </style>
   </head>
   <body>
