--- a/task_v2.html
+++ b/task_v2.html
@@ -20,15 +20,15 @@
           position: relative;
           background-color: #fff;
           width: 100vw;
-          min-height: 100vh;
+          height: 100vh;
           overflow-y: auto; /* Enable vertical scrolling */
           display: flex;
           flex-direction: column;
           align-items: center;
-          text-align: center;
+          text-align: left;
           font-size: 16px;
           color: #21243d;
-          font-family: 'Heebo', sans-serif;
+          font-family: Heebo;
       }
     </style>
   </head>
