--- a/task_v2.html
+++ b/task_v2.html
@@ -25,10 +25,11 @@
           display: flex;
           flex-direction: column;
           align-items: center;
-          text-align: left;
+          justify-content: center; /* Center vertically */
+          text-align: center; /* Center horizontally */
           font-size: 16px;
           color: #21243d;
-          font-family: Heebo;
+          font-family: 'Heebo', sans-serif;
       }
     </style>
   </head>
