--- a/task_v2.html
+++ b/task_v2.html
@@ -20,6 +20,14 @@
           display: flex;
           flex-direction: column;
           align-items: center;
+          justify-content: center; /* Center vertically */
+          text-align: center; /* Center horizontally */
+          overflow-y: auto;
+          position: relative;
+          background-color: #fff;
+          font-size: 16px;
+          color: #21243d;
+          font-family: 'Heebo', sans-serif;
           width: 100%;
           max-width: 1200px; /* Set a maximum width if desired */
           margin: 0 auto;
