--- a/task_v2.html
+++ b/task_v2.html
@@ -17,21 +17,18 @@
       }
       
       .home {
+          position: relative;
+          background-color: #fff;
+          width: 100vw;
+          height: 100vh;
+          overflow-y: auto; /* Enable vertical scrolling */
           display: flex;
           flex-direction: column;
           align-items: center;
-          justify-content: center; /* Center vertically */
-          text-align: center; /* Center horizontally */
-          overflow-y: auto;
-          position: relative;
-          background-color: #fff;
+          text-align: left;
           font-size: 16px;
           color: #21243d;
-          font-family: 'Heebo', sans-serif;
-          width: 100%;
-          max-width: 1200px; /* Set a maximum width if desired */
-          margin: 0 auto;
-          padding: 20px; /* Add padding as needed */
+          font-family: Heebo;
       }
     </style>
   </head>
