--- a/task_v2.html
+++ b/task_v2.html
@@ -19,16 +19,21 @@
       .home {
           position: relative;
           background-color: #fff;
-          width: 100vw;
+          width: 100%;
           height: 100vh;
           overflow-y: auto; /* Enable vertical scrolling */
           display: flex;
           flex-direction: column;
           align-items: center;
-          text-align: left;
+          justify-content: center; /* Center vertically */
+          text-align: center; /* Center horizontally */
           font-size: 16px;
           color: #21243d;
-          font-family: Heebo;
+          font-family: 'Heebo', sans-serif;
+          padding: 20px; /* Add padding as needed */
+          box-sizing: border-box; /* Include padding in the element's total width and height */
+          max-width: 1200px; /* Set a maximum width if desired */
+          margin: 0 auto; /* Center the container horizontally */
       }
     </style>
   </head>
