--- a/task_v2.html
+++ b/task_v2.html
@@ -30,7 +30,7 @@
           font-size: 16px;
           color: #21243d;
           font-family: 'Heebo', sans-serif;
-          padding: 20px;
+          padding: 20px; /* Add padding as needed */
           box-sizing: border-box; /* Include padding in the element's total width and height */
           margin: 0 auto; /* Center the container horizontally */
       }
