--- a/task_v2.html
+++ b/task_v2.html
@@ -25,13 +25,14 @@
           display: flex;
           flex-direction: column;
           align-items: center;
-          justify-content: center; /* Center vertically */
-          text-align: center; /* Center horizontally */
+          justify-content: center;
+          text-align: center;
           font-size: 16px;
           color: #21243d;
           font-family: 'Heebo', sans-serif;
-          box-sizing: border-box; /* Include padding in the element's total width and height */
-          padding: 20px; /* Add padding as needed */
+          box-sizing: border-box;
+          padding: 20px;
+          margin: 0; /* Add this line to reset margin */
       }
     </style>
   </head>
