--- a/task_v2.html
+++ b/task_v2.html
@@ -17,9 +17,14 @@
       }
       
       .home {
+          position: relative;
           background-color: #fff;
-          padding: 20px;
-          box-sizing: border-box;
+          width: 100vw;
+          height: 100vh;
+          overflow-y: auto;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
           text-align: center;
           font-size: 16px;
           color: #21243d;
