--- a/task_v2.html
+++ b/task_v2.html
@@ -19,8 +19,9 @@
       .home {
           position: relative;
           background-color: #fff;
-          width: 100vw;
-          height: 100vh;
+          width: 80%; /* Adjust the width as needed */
+          max-width: 1200px; /* Set a maximum width if desired */
+          height: auto;
           overflow-y: auto;
           display: flex;
           flex-direction: column;
@@ -29,6 +30,7 @@
           font-size: 16px;
           color: #21243d;
           font-family: 'Heebo', sans-serif;
+          padding: 20px; /* Add padding as needed */
       }
     </style>
   </head>
