--- a/task_v2.html
+++ b/task_v2.html
@@ -19,9 +19,8 @@
       .home {
           position: relative;
           background-color: #fff;
-          width: 80%; /* Adjust the width as needed */
-          max-width: 1200px; /* Set a maximum width if desired */
-          height: auto;
+          width: 100vw;
+          height: 100vh;
           overflow-y: auto;
           display: flex;
           flex-direction: column;
@@ -30,7 +29,6 @@
           font-size: 16px;
           color: #21243d;
           font-family: 'Heebo', sans-serif;
-          padding: 20px; /* Add padding as needed */
       }
     </style>
   </head>
