--- a/task_v2.html
+++ b/task_v2.html
@@ -25,7 +25,7 @@
           display: flex;
           flex-direction: column;
           align-items: center;
-          justify-content: center; /* Center vertically */
+          justify-content: center;
           text-align: center;
           font-size: 16px;
           color: #21243d;
