--- a/task_v2.html
+++ b/task_v2.html
@@ -19,17 +19,17 @@
       .home {
           position: relative;
           background-color: #fff;
-          width: 100vw;
-          height: 100vh;
-          overflow-y: auto;
+          width: 100%;
+          max-width: 2200px; /* Set a maximum width if desired */
+          min-height: 100vh;
           display: flex;
           flex-direction: column;
           align-items: center;
-          justify-content: center;
           text-align: center;
           font-size: 16px;
           color: #21243d;
           font-family: 'Heebo', sans-serif;
+          padding: 20px; /* Add padding as needed */
       }
     </style>
   </head>
