--- a/task_v2.html
+++ b/task_v2.html
@@ -30,6 +30,7 @@
           color: #21243d;
           font-family: 'Heebo', sans-serif;
           padding: 20px; /* Add padding as needed */
+          margin-left: 20px; /* Adjusted margin to move it to the right */
       }
     </style>
   </head>
