--- a/task_v2.html
+++ b/task_v2.html
@@ -19,17 +19,16 @@
       .home {
           position: relative;
           background-color: #fff;
-          width: 100%;
-          max-width: 1000em; /* Set a maximum width if desired */
-          min-height: 100vh;
+          width: 100vw;
+          height: 100vh;
+          overflow-y: auto; /* Enable vertical scrolling */
           display: flex;
           flex-direction: column;
           align-items: center;
-          text-align: center;
+          text-align: left;
           font-size: 16px;
           color: #21243d;
-          font-family: 'Heebo', sans-serif;
-          padding: 20px; /* Add padding as needed */
+          font-family: Heebo;
           margin-left: 400px; /* Adjusted margin to move it to the right */
       }
     </style>
