--- a/task_v2.html
+++ b/task_v2.html
@@ -29,6 +29,7 @@
           font-size: 16px;
           color: #21243d;
           font-family: Heebo;
+          margin-left: 400px;
       }
     </style>
   </head>
