--- a/task_v2.html
+++ b/task_v2.html
@@ -31,6 +31,22 @@
           font-family: Heebo;
           margin-left: 400px;
       }
+      .navigation-menu {
+          list-style: none;
+          padding: 0;
+          text-align: center;
+        }
+    
+      .navigation-menu li {
+          margin: 10px 0;
+        }
+    
+      .button-link {
+          text-decoration: none;
+          color: #000;
+          font-size: 20px;
+          font-weight: 500;
+        }
     </style>
   </head>
   <body>
@@ -46,9 +62,12 @@
         For the sake of the role, he is ready to eat insects;
         it’s time to make a film about his personal life in the spirit of Indian cinema filled with passions and unexpected twists.
       </div>
-      <button class="works">Works</button>
-      <div class="blog">Blog</div>
-      <div class="contact">Contact</div>
+      <ul class="navigation-menu">
+        <li><a class="button-link" href="#main">Main</a></li>
+        <li><a class="button-link" href="#about-me">About Someone</a></li>
+        <li><a class="button-link" href="#practical-works">Practical Works</a></li>
+        <li><a class="button-link" href="#laboratory-classes">Laboratory Works</a></li>
+      </ul>
       <div class="download-resume">Download Resume</div>
       <img class="home-inner" alt="" src="https://i.redd.it/g4fm789q2cc11.jpg" />
 
