--- a/task_v2.html
+++ b/task_v2.html
@@ -42,10 +42,19 @@
         }
     
       .button-link {
-          text-decoration: none;
-          color: #000;
-          font-size: 20px;
-          font-weight: 500;
+            text-decoration: none;
+            font-size: var(--font-size-xl);
+            font-weight: 500;
+            display: inline-block;
+            background-color: #007BFF;
+            color: #fff;
+            padding: 10px 20px;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+      .button-link:hover {
+            background-color: #0056b3;
         }
     </style>
   </head>
