--- a/task_v2.html
+++ b/task_v2.html
@@ -15,6 +15,16 @@
           height: 100vh;
           margin: 0;
       }
+      nav {
+            text-align: center;
+        }
+
+      ul {
+            list-style: none;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+        }
       
       .home {
           position: relative;
