--- a/task_v2.html
+++ b/task_v2.html
@@ -25,6 +25,11 @@
             display: flex;
             justify-content: center;
         }
+       a {
+            text-decoration: none;
+            color: #007BFF;
+            font-weight: bold;
+        }
       
       .home {
           position: relative;
