--- a/task_v2.html
+++ b/task_v2.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./index.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;700;900&display=swap"/>
     <style>
-       body {
+      body {
           display: flex;
           align-items: center;
           justify-content: center;
@@ -29,6 +29,9 @@
             text-decoration: none;
             color: #007BFF;
             font-weight: bold;
+        }
+      div {
+            margin-bottom: 15px;
         }
       
       .home {
