--- a/task_v2.html
+++ b/task_v2.html
@@ -53,6 +53,9 @@
       list-style: none;
       padding: 0;
       text-align: center;
+      display: flex;
+      align-items: center; /* Center vertically */
+      height: 100%; /* Make sure the container takes full height */
     }
 
     .navigation-menu li {
