--- a/task_v2.html
+++ b/task_v2.html
@@ -54,8 +54,10 @@
       padding: 0;
       text-align: center;
       display: flex;
-      align-items: center; /* Center vertically */
-      height: 100%; /* Make sure the container takes full height */
+      flex-direction: column;
+      align-items: center; /* Center horizontally */
+      justify-content: center; /* Center vertically */
+      height: 100vh; /* Make sure the container takes full height */
     }
 
     .navigation-menu li {
