--- a/task_v2.html
+++ b/task_v2.html
@@ -42,7 +42,8 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      text-align: left;
+      justify-content: center;
+      text-align: center;
       font-size: 16px;
       color: #21243d;
       font-family: Heebo;
@@ -52,12 +53,10 @@
     .navigation-menu {
       list-style: none;
       padding: 0;
-      text-align: center;
     }
 
     .navigation-menu li {
-      margin: 10px;
-      display: inline-block;
+      margin: 10px 0;
     }
 
     .button-link {
