--- a/task_v2.html
+++ b/task_v2.html
@@ -42,8 +42,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
-      text-align: center;
+      text-align: left;
       font-size: 16px;
       color: #21243d;
       font-family: Heebo;
@@ -53,10 +52,12 @@
     .navigation-menu {
       list-style: none;
       padding: 0;
+      text-align: center;
     }
 
     .navigation-menu li {
-      margin: 10px 0;
+      margin: 10px;
+      display: inline-block;
     }
 
     .button-link {
