--- a/task_v2.html
+++ b/task_v2.html
@@ -42,7 +42,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      text-align: left;
+      text-align: center;
       font-size: 16px;
       color: #21243d;
       font-family: Heebo;
@@ -53,11 +53,11 @@
       list-style: none;
       padding: 0;
       text-align: center;
+      justify-content: center; /* Center the buttons horizontally */
     }
 
     .navigation-menu li {
       margin: 10px;
-      display: inline-block;
     }
 
     .button-link {
