--- a/task_v2.html
+++ b/task_v2.html
@@ -57,8 +57,7 @@
       text-align: center;
       position: absolute;
       top: 0;
-      left: 50%; /* Center horizontally */
-      transform: translateX(-50%); /* Adjust for half the width of the menu */
+      width: 100%; /* Take full width */
       background-color: #ffffff;
     }
 
