--- a/task_v2.html
+++ b/task_v2.html
@@ -118,7 +118,7 @@
       </div>
     <nav>
       <ul class="navigation-menu">
-        <li><a id="button1" class="button-link" href="#main">Main</a></li>
+        <li><a id="button1" class="button-link" >Main</a></li>
         <li><a id="button2" class="button-link" href="#about-me">About Someone</a></li>
         <li><a id="button3" class="button-link" href="#practical-works">Practical Works</a></li>
         <li><a id="button4" class="button-link" href="#laboratory-classes">Laboratory Works</a></li>
