--- a/task_v2.html
+++ b/task_v2.html
@@ -88,19 +88,19 @@
   <body>
     <script>
       document.getElementById('button1').addEventListener('click', function() {
-        window.location.href = 'https://benxkirby.github.io/kiyb/';
+        window.location.href = 'https://benxkirby.github.io/kiyb/#main';
       });
   
       document.getElementById('button2').addEventListener('click', function() {
-        window.location.href = 'https://benxkirby.github.io/kiyb/';
+        window.location.href = 'https://benxkirby.github.io/kiyb/#about-me';
       });
   
       document.getElementById('button3').addEventListener('click', function() {
-        window.location.href = 'https://benxkirby.github.io/kiyb/';
+        window.location.href = 'https://benxkirby.github.io/kiyb/#practical-works';
       });
   
       document.getElementById('button4').addEventListener('click', function() {
-        window.location.href = 'https://benxkirby.github.io/kiyb/';
+        window.location.href = 'https://benxkirby.github.io/kiyb/#laboratory-classes';
       });
     </script>
     <div class="home" id="homeContainer">
