--- a/task_v2.html
+++ b/task_v2.html
@@ -115,14 +115,14 @@
         For the sake of the role, he is ready to eat insects;
         it’s time to make a film about his personal life in the spirit of Indian cinema filled with passions and unexpected twists.
       </div>
-    <nav>
-      <ul class="navigation-menu">
-        <li><a id="button1" class="button-link" href="#main">Main</a></li>
-        <li><a id="button2" class="button-link" href="#about-me">About Someone</a></li>
-        <li><a id="button3" class="button-link" href="#practical-works">Practical Works</a></li>
-        <li><a id="button4" class="button-link" href="#laboratory-classes">Laboratory Works</a></li>
-      </ul>
-    </nav>
+      <nav>
+        <ul class="navigation-menu">
+          <li><a id="button1" class="button-link" href="#">Main</a></li>
+          <li><a id="button2" class="button-link" href="#">About Someone</a></li>
+          <li><a id="button3" class="button-link" href="#">Practical Works</a></li>
+          <li><a id="button4" class="button-link" href="#">Laboratory Works</a></li>
+        </ul>
+      </nav>
       <div class="download-resume">Download Resume</div>
       <img class="home-inner" alt="" src="https://i.redd.it/g4fm789q2cc11.jpg" />
 
